--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
     <title> Home - MVR</title>
 </head>
@@ -12,22 +13,22 @@
 
         <h1> Madryn Virtual Racer </h1>
 
-        <nav>
-            <ul>
-                <li> 
-                    <a  href="nosotros.html"> Nosotros </a>
-                </li>
-                <li>
-                    <a href="pages/plataformas.html"> Plataformas </a> 
-                </li>
-                <li> 
-                    <a href="pages/torneos.html"> Torneos </a>
-                </li>
-                <li>
-                    <a href="pages/contacto.html"> Contacto </a>  
-                </li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html">MVR</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link" href="pages/nosotros.html">Nosotros<a>
+                  <a class="nav-link" href="pages/plataformas.html">Plataformas</a>
+                  <a class="nav-link" href="pages/torneos.html">Torneos</a>
+                  <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                </div>
+              </div>
+            </div>
+          </nav>
 
     </header>
 
@@ -36,7 +37,8 @@
             <div class="grid">
                 <div class="caja">
                     <img src="../img/mvr.jpg" alt="Nuestros Autos">
-                    <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae nobis aliquid voluptatum neque iure quae hic doloremque cum dolor harum? Eligendi beatae odit magni quo illo fuga suscipit facere reprehenderit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda incidunt tempora ducimus qui nulla id, perferendis saepe quisquam repudiandae, dignissimos iusto, alias delectus cumque quos nemo explicabo excepturi. Odio, quibusdam!</p>   
+                    <p> Bienvenidos a Madryn Virtual Racer! En esta pagina podr{an encontrar toda la informacin sobre nuestra liga, ya sea en que plataformas corremos, cuando se realizan nuestras competencias como a su vez podran seguir en vivo los resultados de cada carrera. Los esperamos ver en pista!}
+                    </p>   
                 </div>
             </div>
         
@@ -44,7 +46,9 @@
                 <div class="grid">
                     <div class="caja">
                         <img src="../img/tabla.png">
-                        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis placeat, iure cumque quos quae impedit earum cum quo excepturi veniam deleniti id ratione eaque repudiandae facere ipsam error magnam iusto! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum commodi qui expedita quaerat iure hic ex necessitatibus consequatur, facere similique fugiat dolorem debitis, illum deserunt blanditiis, id quos vel quas!</p>
+                        <p> Como mencionamos antes, tenemos una pagina para que puedan seguir en vivo los tiempos de carrera de nuestras competencias, como a su vez seguir la posicion de cada piloto en pista a la hora de la competencia.
+                        Para poder acceder deben ir al siguiente link:
+                        </p>
                     </div>  
                 </div>
 
@@ -54,5 +58,7 @@
         <h6> Todos los derechos reservados</h6>
     </footer>
     
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 </html>
