--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <title> Nosotros - MVR </title>
 </head>
@@ -12,37 +13,41 @@
         
         <h1> Sobre Nosotros </h1>
 
-        <nav>
-            <ul>
-                <li> 
-                    <a href="../index.html"> Home </a>
-                </li>
-                <li>
-                    <a href="nosotros.html"> Nosotros </a> 
-                </li>
-                <li> 
-                    <a href="plataformas.html"> Plataformas </a>
-                </li>
-                <li>
-                    <a href="torneos.html"> Torneos </a>  
-                </li>
-                <li> 
-                    <a href="contacto.html"> Contacto </a> 
-                </li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="../index.html">MVR</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link" href="nosotros.html">Nosotros<a>
+                  <a class="nav-link" href="plataformas.html">Plataformas</a>
+                  <a class="nav-link" href="torneos.html">Torneos</a>
+                  <a class="nav-link" href="contacto.html">Contacto</a>
+                </div>
+              </div>
+            </div>
+          </nav>
 
     </header>
 
     <main>
         <h3> Sobre Nosotros </h3>
-        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat, iste neque distinctio, placeat officiis tempora tenetur enim, molestiae accusantium voluptatem nihil aperiam eaque dolorum quod? At voluptates error optio magni? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint officiis maiores molestiae architecto, quo cupiditate explicabo rem, minus assumenda modi maxime a! Ut similique iste at esse aperiam deserunt corrupti! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id porro eius ut veritatis iusto amet modi repellendus ab accusantium facere, laudantium autem, tenetur nisi reiciendis alias minima iure dicta hic. </p>
-        <img src="../img/brsf.jpg">
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione corrupti, possimus aliquid molestias et, nostrum laborum repudiandae cupiditate ipsum tempore magni recusandae id sed est quos ab obcaecati in quam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam totam ipsa exercitationem aliquam eius distinctio. Non, velit libero consequatur expedita aut qui placeat laboriosam iusto accusamus. Nam quos et iure!</p>
+            <div class="grid">
+                <div class="caja">
+                    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat, iste neque distinctio, placeat officiis tempora tenetur enim, molestiae accusantium voluptatem nihil aperiam eaque dolorum quod? At voluptates error optio magni? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint officiis maiores molestiae architecto, quo cupiditate explicabo rem, minus assumenda modi maxime a! Ut similique iste at esse aperiam deserunt corrupti! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id porro eius ut veritatis iusto amet modi repellendus ab accusantium facere, laudantium autem, tenetur nisi reiciendis alias minima iure dicta hic. </p>
+                    <img src="../img/brsf.jpg">
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione corrupti, possimus aliquid molestias et, nostrum laborum repudiandae cupiditate ipsum tempore magni recusandae id sed est quos ab obcaecati in quam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam totam ipsa exercitationem aliquam eius distinctio. Non, velit libero consequatur expedita aut qui placeat laboriosam iusto accusamus. Nam quos et iure!</p>
+                </div>
+            </div>  
     </main>
 
     <footer>
         <h6> Todos los derechos reservados</h6>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 </html>
