--- a/pages/plataformas.html
+++ b/pages/plataformas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <title> Plataormas - MVR </title>
 </head>
@@ -12,26 +13,22 @@
 
         <h1> Nuestras Plataformas </h1>
 
-        <nav>
-            <ul>
-                <li>
-                    <a href="../index.html"> Home </a> 
-                </li>
-                <li> 
-                    <a href="nosotros.html"> Nosotros </a>
-                </li>
-                <li> 
-                    <a href="plataformas.html"> Plataformas </a> 
-                </li>
-                <li> 
-                    <a href="torneos.html"> Torneos </a>
-                </li>
-                <li>
-                    <a href="contacto.html"> Contacto </a>  
-                </li>
-                
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="../index.html">MVR</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link" href="nosotros.html">Nosotros<a>
+                  <a class="nav-link" href="plataformas.html">Plataformas</a>
+                  <a class="nav-link" href="torneos.html">Torneos</a>
+                  <a class="nav-link" href="contacto.html">Contacto</a>
+                </div>
+              </div>
+            </div>
+          </nav>
         
     </header>
 
@@ -39,7 +36,7 @@
         <h3> Assetto Corsa </h3>
             <div class="grid">
                 <div class="caja">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita adipisci, saepe beatae fugiat impedit sed voluptas ea. Dolorum aperiam facere incidunt natus harum qui sed odio? Sequi magnam repellendus nesciunt.</p>
+                    <p>Assetto Corsa es un simulador de carreras que intenta ofrecer una experiencia de conducción realista con una variedad de autos de carreras a través de la física detallada y la simulación de llantas en pistas de carreras recreadas a través de la tecnología de escaneo láser. Es compatible con una amplia gama de periféricos, como el mouse, el teclado, las ruedas, los gamepads, las pantallas triples, el seguimiento de la cabeza TrackIR y las pantallas montadas en la cabeza VR, así como los sistemas Nvidia 3D Vision y de movimiento profesional. El software se puede ampliar a través de contenido de terceros modificado.</p>
                     <img src="../img/assetto-corsa.png">
                 </div>
             </div>
@@ -47,7 +44,7 @@
         <h3> Automovilista 2 </h3>
             <div class="grid">
                 <div class="caja">
-                    <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat explicabo optio inventore molestias maxime non commodi cupiditate eaque voluptas et id dolorum a harum labore impedit nobis, alias mollitia totam.</p>
+                    <p> Automobilista 2 es la culminación de un proyecto desarrollado en el transcurso de casi una década. En esencia, es una simulación completa de la escena del automovilismo brasileño, que presenta todas las principales series de carreras brasileñas, pistas de carreras y fabricantes.</p>
                     <img src="../img/ams2.jpg">
                 </div>  
             </div>
@@ -56,7 +53,7 @@
         <h3> Assetto Corsa Competizione </h3>
             <div class="grid">
                 <div class="caja">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis nihil mollitia rerum totam quisquam provident ipsum quaerat modi esse consectetur itaque voluptate, asperiores temporibus laudantium magni, voluptatem, perferendis veritatis est.</p>
+                    <p>Assetto Corsa Competizione es un videojuego de carreras desarrollado por la empresa Kunos Simulazioni con licencia oficial de Blancpain GT Series 2018. nicialmente, el videojuego iba a utilizar un motor gráfico creado por la misma desarrolladora; el mismo usado en Assetto Corsa, pero contactaron con Unreal Engine para contar con un motor que permita carreras nocturnas y condiciones climáticas realistas. Con el nuevo motor, se mejoró los modelos de neumáticos y de física aerodinámica utilizados en el título anterior, como animaciones de captura de movimiento, audio y el enfoque detallado en una sola categoría o clase de autos. Todos los autódromos de Blancpain GT Series, tanto de la serie Endurance como de Sprint, están siendo reproducidos con escaneo láser.</p>
                 <img src="../img/acc.jpg">
                 </div>
             </div>
@@ -66,5 +63,8 @@
     <footer>
         <h6> Todos los derechos reservados</h6>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 </html>
