--- a/pages/torneos.html
+++ b/pages/torneos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <title> Torneos - MVR</title>
 </head>
@@ -12,44 +13,56 @@
 
         <h1> Nuestros Torneos </h1>
 
-        <nav>
-            <ul>
-                <li> 
-                    <a href="../index.html"> Home </a>
-                </li>
-                <li> 
-                    <a href="nosotros.html"> Nosotros </a>
-                </li>
-                <li>
-                    <a href="plataformas.html"> Plataformas </a> 
-                </li>
-                <li> 
-                    <a href="torneos.html"> Torneos </a>
-                </li>
-                <li>
-                    <a href="contacto.html"> Contacto </a>  
-                </li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="../index.html">MVR</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link" href="nosotros.html">Nosotros<a>
+                  <a class="nav-link" href="plataformas.html">Plataformas</a>
+                  <a class="nav-link" href="torneos.html">Torneos</a>
+                  <a class="nav-link" href="contacto.html">Contacto</a>
+                </div>
+              </div>
+            </div>
+          </nav>
 
     </header>
 
     <main>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/eTF3tKKJ8KA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p> Una de las maniobras mas impresionantes de nuestro primer torneo del Stock Federal M3 </p>
+        <div class="grid">
+            <div class="caja">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/eTF3tKKJ8KA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p> Una de las maniobras mas impresionantes de nuestro primer torneo del Stock Federal M3 </p>
+            </div>
+        </div>
 
         <h3> Stock Federal M3 </h3>
-        <img src="../img/parana.png" alt="Stock Federal M3">
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut voluptatibus ipsum quam ullam. Possimus tempore, fuga voluptate quidem officiis quisquam dolor, ducimus modi voluptas quis necessitatibus sint, fugit ipsam obcaecati.</p>
-
+            <div class="grid">
+                <div class="caja">
+                    <img src="../img/parana.png" alt="Stock Federal M3">
+                    <p> Nuestro torneo pricipal, el Stock Federal M3 viene a ser ua reperesentacion de la categoria Turismo Nacional en Argentina. Son autos de turismo que se pueden ver en el dia a dia en la calle compitiendo en los circuitos del pais. Compiten autos como el Chevrolet Cruze, Ford Focus, Toyota Corolla, Honda Civic y Volkswagen Vento, entre otros.</p>
+                </div>
+            </div>
+        
         <h3> BTCC Historicos </h3>
-        <img src="../img/btcc.jpg" alt="BTCC">
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius et pariatur numquam, voluptatibus molestias repudiandae quaerat aperiam aliquam voluptatem nisi inventore, voluptate sunt ducimus. Ratione quam accusamus reiciendis cumque sed?</p>
-       
+            <div class="grid">
+                <div class="caja">
+                    <img src="../img/btcc.jpg" alt="BTCC">
+                    <p> La categoria que a fines de los 90s era casi tan popular en la F1, el Campeonato de Turismos Britanico (o BTCC por sus siglas en ingles) fue una categoria que mantenia al publico pegado a la pantalla con el espectaculo que brindaban en cada carrera. Tenemos el placer de poder recrearla en los simuladores y poder vivrla desde adentro! </p>
+                </div>
+            </div>
+
     </main>
 
     <footer>
         <h6> Todos los derechos reservados</h6>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 </html>
