--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="simracing, inicio, en vivo, liga, automovilismo">
+    <meta name="description" content="Bienvenidos a MVR, una liga de SimRacing Argentina" >
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
     <title> Home - MVR</title>
@@ -37,7 +39,7 @@
             <div class="grid">
                 <div class="caja">
                     <img src="../img/mvr.jpg" alt="Nuestros Autos">
-                    <p> Bienvenidos a Madryn Virtual Racer! En esta pagina podr{an encontrar toda la informacin sobre nuestra liga, ya sea en que plataformas corremos, cuando se realizan nuestras competencias como a su vez podran seguir en vivo los resultados de cada carrera. Los esperamos ver en pista!}
+                    <p> Bienvenidos a Madryn Virtual Racer! En esta pagina podran encontrar toda la informacin sobre nuestra liga, ya sea en que plataformas corremos, cuando se realizan nuestras competencias como a su vez podran seguir en vivo los resultados de cada carrera. Los esperamos ver en pista!
                     </p>   
                 </div>
             </div>
@@ -47,15 +49,16 @@
                     <div class="caja">
                         <img src="../img/tabla.png">
                         <p> Como mencionamos antes, tenemos una pagina para que puedan seguir en vivo los tiempos de carrera de nuestras competencias, como a su vez seguir la posicion de cada piloto en pista a la hora de la competencia.
-                        Para poder acceder deben ir al siguiente link:
+                        Para poder acceder deberan acceder mediante el boton a continuacion
                         </p>
+                        <p class="boton">Link enlace a tiempos en vivo</p>
                     </div>  
                 </div>
 
     </main>
 
     <footer>
-        <h6> Todos los derechos reservados</h6>
+        <h4> 2022 Todos los derechos reservados</h4>
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
