--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="simracing, informacion, nosotros, liga, automovilismo">
+    <meta name="description" content="Sobre la liga - MVR">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <title> Nosotros - MVR </title>
@@ -36,15 +38,15 @@
         <h3> Sobre Nosotros </h3>
             <div class="grid">
                 <div class="caja">
-                    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat, iste neque distinctio, placeat officiis tempora tenetur enim, molestiae accusantium voluptatem nihil aperiam eaque dolorum quod? At voluptates error optio magni? Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint officiis maiores molestiae architecto, quo cupiditate explicabo rem, minus assumenda modi maxime a! Ut similique iste at esse aperiam deserunt corrupti! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id porro eius ut veritatis iusto amet modi repellendus ab accusantium facere, laudantium autem, tenetur nisi reiciendis alias minima iure dicta hic. </p>
+                    <p> Somos una liga de entusiastas del automovilismo y el SimRacing, y nos dedicamos a realizar torneos como a su vez tenemos nuestros dias de carreras abiertas para cualquier persona que se quiera sumar. Estamos basados en Puerto Madryn, Chubut, Argentina, pero tenemos miembros de toas partes del pais como a su vez del resto de sudamerica, </p>
                     <img src="../img/brsf.jpg">
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione corrupti, possimus aliquid molestias et, nostrum laborum repudiandae cupiditate ipsum tempore magni recusandae id sed est quos ab obcaecati in quam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam totam ipsa exercitationem aliquam eius distinctio. Non, velit libero consequatur expedita aut qui placeat laboriosam iusto accusamus. Nam quos et iure!</p>
+                    <p> Tenemos nuestros servidores personalizados que tenemos abiertos las 24hs del dia para los participantes de cada torneo, como a su vez tenemos unservidor abierto para cualquier persona que se quera sumar a las actividades de la liga o simplemente quiera pasar a divertirse un rato!</p>
                 </div>
             </div>  
     </main>
 
     <footer>
-        <h6> Todos los derechos reservados</h6>
+        <h4> 2022 Todos los derechos reservados</h4>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
