commiteando modificaciones a pagina torneos acomodando el iframe

--- a/pages/torneos.html
+++ b/pages/torneos.html
@@ -37,7 +37,9 @@
     <main>
         <div class="grid">
             <div class="caja">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/eTF3tKKJ8KA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <div class="container">
+                    <iframe width="560" height="315" class="container-fluid text-center" src="https://www.youtube.com/embed/eTF3tKKJ8KA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
+                </div>
                 <p> Una de las maniobras mas impresionantes de nuestro primer torneo del Stock Federal M3 </p>
             </div>
         </div>
